--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -237,8 +237,71 @@
 	line-height: 19.6px;
 }
 
+.quiz__filters {
+	margin-top: 24px;
+}
+
+.filter-group {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	margin-bottom: 24px;
+}
+
+.filter-group .checkbox {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.filter-group .checkbox label {
+	font-family: "GT Alpina Typewriter";
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 17px;
+	margin: 0;
+}
+
+.filter-group .checkbox input[type="checkbox"] {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 14px;
+	height: 14px;
+	border: 1px solid var(--color-navy);
+	border-radius: 2px;
+	outline: none;
+	cursor: pointer;
+	position: relative;
+}
+
+.filter-group .checkbox input[type="checkbox"]::after {
+	content: "";
+	position: absolute;
+}
+
+.filter-group .checkbox input[type="checkbox"]:checked::after {
+	left: 4px;
+	top: 0px;
+	width: 3px;
+	height: 8px;
+	border: solid black;
+	border-width: 0 1px 1px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+
 .quiz__activities {
 	margin-top: 24px;
+}
+
+.quiz__activities .bb-activity-tile-title {
+	font-size: 20px;
+	line-height: 26px;
+}
+
+.quiz__activities .button-text {
+	font-size: 14px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -308,6 +371,17 @@
 
 	.quiz__card .question {
 		margin-bottom: 60px;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.quiz__activities .bb-activity-tile-title {
+		font-size: 30px;
+		line-height: 36px;
+	}
+
+	.quiz__activities .button-text {
+		font-size: 18px;
 	}
 }
 
@@ -715,8 +789,12 @@
 		display: block;
 	}
 
+	.quiz__filters {
+		grid-column: span 3;
+	}
+
 	.quiz__activities {
-		grid-column: span 12;
+		grid-column: span 9;
 	}
 }
 
