--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -12,8 +12,10 @@
 
 .quiz {
 	--color-navy: #042159;
+	--color-navy-light: #e9eef7;
 	--color-purple: #5d62f4;
 	--color-purple-light: #dfe0fd;
+	--color-neutral: #ecede7;
 	--color-white: #fff;
 	--color-black: #000;
 	--color-error: #c4291c;
@@ -82,7 +84,11 @@
 }
 
 .quiz__body {
-	padding: 20px 16px;
+	display: block;
+}
+
+.quiz__summary {
+	margin: 20px 16px;
 }
 
 .quiz__summary .buttons {
@@ -263,7 +269,8 @@
 	line-height: 16.02px;
 }
 
-.quiz__results {
+.quiz__results-graphic-summary {
+	margin: 20px 16px;
 	padding: 16px;
 	overflow: hidden;
 	border: 1px solid var(--color-navy);
@@ -295,15 +302,146 @@
 	line-height: 19.6px;
 }
 
+.quiz__results-tabs {
+	margin: 24px 0 0 0;
+	padding: 0 16px;
+	border-bottom: 1px solid var(--color-navy);
+}
+
+.quiz__results-tabs ul {
+	list-style-type: none;
+	display: flex;
+	gap: 6px;
+	margin: 0;
+	padding: 0;
+}
+
+.quiz__results-tabs ul li {
+	margin: 0;
+	padding: 0;
+}
+
+.quiz__results-tabs ul li button {
+	padding: 10px;
+	border-color: var(--color-white);
+	border-width: 1px 1px 0 1px;
+	border-style: solid;
+	font-family: "GT Alpina Typewriter";
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 13.64px;
+	position: relative;
+}
+
+.quiz__results-tabs ul li button.tab.tab--curated {
+	background: var(--color-navy-light);
+}
+
+.quiz__results-tabs ul li button.tab.tab--all {
+	background: var(--color-neutral);
+}
+
+.quiz__results-tabs ul li button.tab.tab--is-active {
+	border-color: var(--color-navy);
+	top: 1px;
+}
+
+.quiz__results-tab-panels .tab-panel {
+	display: none;
+}
+
+.quiz__results-tab-panels .tab-panel.tab-panel--is-active {
+	display: block;
+}
+
+.quiz__results-tab-panels .tab-panel.tab-panel--curated {
+	background: var(--color-navy-light);
+}
+
+.quiz__results-tab-panels .tab-panel.tab-panel--all {
+	background: var(--color-neutral);
+}
+
+.quiz__results-filters-activities {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 24px;
+	padding: 20px 16px;
+}
+
 .quiz__filters {
-	margin-top: 24px;
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 24px;
+}
+
+.toggle {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 8px 0;
+	background: transparent;
+}
+
+.toggle__indicator {
+	transition: transform 0.3s;
+}
+
+.toggle.toggle--is-open .toggle__indicator {
+	transform: rotate(180deg);
+}
+
+.toggle__target {
+	position: relative;
+	height: 0;
+	overflow: hidden;
+}
+
+.toggle__target.toggle__target--is-open {
+	height: auto;
 }
 
 .filter-group {
 	display: flex;
 	flex-direction: column;
-	gap: 16px;
-	margin-bottom: 24px;
+	border-bottom: 1px solid var(--color-navy);
+}
+
+.filter-group__title {
+	font-family: "GT Planar";
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 22px;
+}
+
+.filter-group__options {
+	position: relative;
+}
+
+.filter-group__options .options {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	padding: 12px 0 24px 0;
+	max-height: 120px;
+	overflow-y: scroll;
+}
+
+.filter-group__options .options__overlay {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 32px;
+	pointer-events: none;
+}
+
+.quiz__results-tab-panels .tab-panel.tab-panel--curated .filter-group__options .options__overlay {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-navy-light) 70%);
+}
+
+.quiz__results-tab-panels .tab-panel.tab-panel--all .filter-group__options .options__overlay {
+	background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--color-neutral) 70%);
 }
 
 .filter-group .checkbox {
@@ -350,7 +488,7 @@
 }
 
 .quiz__activities {
-	margin-top: 24px;
+	margin-top: 0;
 }
 
 .quiz__activities .bb-activity-tile-title {
@@ -784,7 +922,6 @@
 		display: grid;
 		grid-template-columns: repeat(12, 1fr);
 		gap: 24px;
-		padding: 20px 40px;
 	}
 
 	.quiz__summary {
@@ -813,7 +950,7 @@
 		display: none;
 	}
 
-	.quiz__results {
+	.quiz__results-graphic-summary {
 		grid-column: span 12;
 		display: grid;
 		grid-template-columns: repeat(12, 1fr);
@@ -841,6 +978,13 @@
 
 	.clock-labels {
 		display: block;
+	}
+
+	.quiz__results-filters-activities {
+		grid-column: span 12;
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
+		gap: 24px;
 	}
 
 	.quiz__filters {
@@ -900,12 +1044,7 @@
 		color: var(--color-navy);
 	}
 
-	.quiz__body {
-		padding-left: 0;
-		padding-right: 0;
-	}
-
-	.quiz__results {
+	.quiz__results-graphic-summary {
 		padding: 0;
 		border: none;
 	}
