--- a/docs/css/clock.css
+++ b/docs/css/clock.css
@@ -281,7 +281,6 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	pointer-events: none;
 	display: none;
 }
 
@@ -298,6 +297,13 @@
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 17px;
+	cursor: pointer;
+	z-index: 300;
+	pointer-events: auto;
+}
+
+.clock-label:hover {
+	text-decoration: underline;
 }
 
 .clock-label--12 {
