--- a/docs/css/tooltips.css
+++ b/docs/css/tooltips.css
@@ -5,6 +5,16 @@
 	min-height: 44px;
 }
 
+.tooltip__icon {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	background-image: url("../images/icons/info.svg");
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
+
 .tooltip__anchor {
 	position: absolute;
 	bottom: 0;
