get legacy rules

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -3,6 +3,7 @@
 @import url("clock.css");
 @import url("text-colors.css");
 @import url("tooltips.css");
+@import url("legacy-rules.css");
 
 /**
  * Quiz 
